# io

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  io.cc  io.hh  io_trace.h  likely.h
examples/: bench.cc
test/: test.cc
